# type-inference

./: .gitignore  Makefile  README.md  dune  dune-project
lib/: dune  lmConfig.ml  pipeline.ml  systemF.ml  typeInference.ml
lib/core/: ast.ml  builtin.ml  dune  effect.ml  imast.ml  lexer.mll  tvar.ml  tvar.mli  utils.ml  var.ml  var.mli  yaccParser.mly  yaccParserPreamble.ml
lib/erase/: ast.ml  builtin.ml  dune  env.ml  env.mli  erase.ml  erase.mli
lib/eval/: dune  eval.ml
lib/parser/: ast.ml  core_parser.ml  dune  eval.ml  lexer.mll  lmParser.ml  parser.ml  parser.mli  yaccParser.mly  yaccParserPreamble.ml
lib/systemF/: arrow.ml  arrow.mli  dune  ensureWellTyped.ml  env.ml  env.mli  equality.ml  fillEffects.ml  fillFolding.ml  folding.ml  main.ml  order.ml  prettyPrinter.ml  prettyPrinter.mli  subst.ml  systemF.ml  systemF.mli  type.ml  utils.ml  utils2.ml
lib/toImast/: dune  env.ml  main.ml  toImast.ml  toImast.mli
lib/toSystemF/: checks.ml  dune  env.ml  equal.ml  subst.ml  toSystemF.ml  toSystemF.mli
lib/typeInference/: dune  env.ml  env.mli  prettyPrinter.ml  type.ml  type.mli  typeInference.ml  unify.ml
lib/typing/: dune  effect.ml  env.ml  env.mli  prettyPrinter.ml  prettyPrinter.mli  schema.ml  type.ml  type.mli  typeInference.ml  typeInference.mli  typing.ml  typing.mli  unify.ml  utils.ml
test/: dune  simple_tester.ml  test.sh
test/end2end/: dune  simple_tester.ml  test.sh
test/tests/: 003_copairs.lm  006_copairs.lm  007_simple_levels.lm  008_fail_levels.lm  009_ifs.lm  010_externs.lm  (+7 more)
tex/: Makefile  macros.sty  notes.tex  paper.tex
(+27 files in other folders)
